[gd_scene load_steps=5 format=3 uid="uid://luayeguxfojd"]

[ext_resource type="PackedScene" uid="uid://b712ycomg3lem" path="res://levels.tscn" id="1"]
[ext_resource type="Script" path="res://script/level_map.gd" id="2"]
[ext_resource type="PackedScene" path="res://main.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://be504ccckxm1j" path="res://img/menu_bar.png" id="5"]

[node name="LevelMap" type="Node2D"]
script = ExtResource("2")

[node name="Menu" type="Node2D" parent="."]

[node name="View" parent="Menu" instance=ExtResource("1")]

[node name="PuzzleUI" parent="." instance=ExtResource("3")]
visible = false

[node name="LoadingCover" type="ColorRect" parent="."]
offset_right = 1031.0
offset_bottom = 617.0
color = Color(0, 0, 0, 1)

[node name="SideMenu" type="Node2D" parent="."]

[node name="PuzzleCounter" type="RichTextLabel" parent="SideMenu"]
offset_left = 426.0
offset_top = 25.0
offset_right = 1004.0
offset_bottom = 71.0
bbcode_enabled = true
text = "0 / 0 "
scroll_active = false

[node name="PuzzleCredits" type="RichTextLabel" parent="SideMenu"]
offset_top = 549.0
offset_right = 1000.0
offset_bottom = 578.0
bbcode_enabled = true
text = "  
"
scroll_active = false

[node name="MenuBarButton" type="TextureButton" parent="SideMenu"]
offset_left = 22.0
offset_top = 22.0
offset_right = 62.0
offset_bottom = 62.0
texture_normal = ExtResource("5")

[node name="Extra" type="Node2D" parent="SideMenu"]
visible = false

[node name="ClearSaveButton" type="Button" parent="SideMenu/Extra"]
offset_left = 15.7071
offset_top = 66.0833
offset_right = 119.707
offset_bottom = 91.0833
text = "Clear Save"

[node name="ExportSaveButton" type="Button" parent="SideMenu/Extra"]
offset_left = 15.7071
offset_top = 109.083
offset_right = 120.707
offset_bottom = 134.083
text = "Export Save"

[connection signal="mouse_entered" from="SideMenu/MenuBarButton" to="." method="_on_menu_bar_button_mouse_entered"]
[connection signal="mouse_exited" from="SideMenu/MenuBarButton" to="." method="_on_menu_bar_button_mouse_exited"]
[connection signal="pressed" from="SideMenu/MenuBarButton" to="." method="_on_menu_bar_button_pressed"]
[connection signal="pressed" from="SideMenu/Extra/ClearSaveButton" to="." method="_on_clear_save_button_pressed"]
